--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Basics</title>
-    <script src="script.js"></script>
+
+    <script src="switch.js"></script>
   </head>
   <body></body>
 </html>
